check_for_public_registry/manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
    app.kubernetes.io/name: "Please allow me"
  name: nginx
  namespace: default
spec:
  containers:
    - image: my.foo.io/nginx
      name: nginx
      resources: {}
